src/objects/ZipListLog__c.object
<CustomObject>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Radius from origin (in miles)</description>
        <label>Distance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExportDatetime__c</fullName>
        <label>ExportDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Starting zip</description>
        <label>Origin</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordCount__c</fullName>
        <label>RecordCount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Comment to update</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ZipListLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZipListLog</label>
    <nameField>
        <label>ZipListLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZipListLogs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>